--- a/Client/src/styles.scss
+++ b/Client/src/styles.scss
@@ -1,1 +1,8 @@
 /* You can add global styles to this file, and also import other style files */
+span {
+  font-size: 16px;
+}
+
+.btn {
+  margin: 0 5px;
+}
