--- a/Client/src/app/app.component.scss
+++ b/Client/src/app/app.component.scss
@@ -2,4 +2,12 @@
   .list-item {
     margin: 20px 10px;
   }
+
+  .btn-success {
+    margin-bottom: 20px;
+  }
+
+  .navbar {
+    margin-bottom: 0;
+  }
 }
