--- a/Client/src/app/users/components/list-users/list-users-dumb.component.html
+++ b/Client/src/app/users/components/list-users/list-users-dumb.component.html
@@ -12,4 +12,4 @@
     [user]="user"
   ></app-user-smart>
 </div>
-<button class="btn btn-success center-block">Add</button>
+<button class="btn btn-success center-block" routerLink="/users/edit">Add</button>
