--- a/Client/src/app/users/components/user-edit/user-edit-dumb.component.html
+++ b/Client/src/app/users/components/user-edit/user-edit-dumb.component.html
@@ -31,8 +31,9 @@
   </div>
   <div class="form-group col-xs-8 col-xs-offset-2">
     <label for="role">Role</label>
-    <select class="col-xs-12" formControlName="role" id="role">
-      <option *ngFor="let role of roles" [ngValue]="role">{{role.name}}</option>
+    <select class="form-control col-xs-12" formControlName="role" id="role">
+      <option value="" disabled>Choose role</option>
+      <option *ngFor="let role of roles" [ngValue]="role.id">{{role.name}}</option>
     </select>
   </div>
   <button
