--- a/Client/src/app/roles/components/list-roles/list-roles-dumb.component.html
+++ b/Client/src/app/roles/components/list-roles/list-roles-dumb.component.html
@@ -11,5 +11,5 @@
     [role]="role"
   ></app-role-smart>
 </div>
-<button class="btn btn-success center-block">Add</button>
+<button class="btn btn-success center-block" routerLink="/roles/edit">Add</button>
 
