configuration delete method for users

--- a/Client/src/app/users/components/list-users/list-users-dumb.component.html
+++ b/Client/src/app/users/components/list-users/list-users-dumb.component.html
@@ -10,6 +10,7 @@
   <app-user-smart
     *ngFor="let user of users"
     [user]="user"
+    (deleteUser)="onDeleteUser($event)"
   ></app-user-smart>
 </div>
 <button class="btn btn-success center-block" routerLink="/users/edit">Add</button>
