--- a/adminka/ClientApp/src/app/users/components/user/user-dumb.component.scss
+++ b/adminka/ClientApp/src/app/users/components/user/user-dumb.component.scss
@@ -1,7 +1,7 @@
 :host {
   .item {
     display: flex;
-    height: 60px;
+    height: auto;
     justify-content: space-between;
     align-items: center;
 
@@ -19,6 +19,10 @@
     }
 
     .access {
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
       width: 60px;
     }
 
